# Hubris

./: .gitignore  .rvmrc  .travis.yml  Gemfile  HISTORY.markdown  History.txt  Hubrify.hs  INSTALL  Manifest.txt  PostInstall.txt  README  README.markdown  README.rdoc  Rakefile  Setup.hs  TODO  hubris.cabal  hubris.gemspec  hubris.tex  new_interface.rb
Haskell/: Hubrify.hs  LICENSE  Setup.hs  hubris.cabal
Haskell/Language/Ruby/: Foo.hs  Hubris.hs  Wrappers.hs  testLib.hs
Haskell/Language/Ruby/Hubris/: Binding.hsc  FileUtil.hs  GHCBuild.hs  Hash.hs  Interpolator.hs  LibraryBuilder.hs
Haskell/binary/: Hubrify.hs
Haskell/cbits/: rshim.c  rshim.h
ext/hint/: .boring  AUTHORS  Changes  LICENSE  README  hint.cabal  run-unit-tests.sh
ext/hint/_darcs/: hashed_inventory  tentative_pristine
ext/hint/_darcs/inventories/: 0000000789-fb846b9673bd75510e2cc7ead23a6ffb9e20859941606657848aa1e7c3b434a9  0000000853-91d8f428029670814ccb816dae1d0cbc7ffa1e893608abc9a6cfd07f67f99808  0000000862-5446ac845be3373d9a6b27fa3d8ed33225b8c18886bdd7a23f0934809c7d3821  0000003059-7a50ca9fac280dd77afd968a8e2e7530202359370df2963b6bbc39e266eb6be0  0000003182-9afdd9c8d88a2119061e5148799d0c8586bd429873cb817263c6d8cf33cd765e  0000022659-f5842c66423f5c9709257eb0f445ba07edfe5c4e6f8d2e573e773c9d036684d6
ext/hint/_darcs/patches/: 0000000101-5887bbf067a96c32fe88889d4035d29d4aa872044160aa5b41ace9dd7d9f5fa0  0000000104-de328972d7c45cc50fd6049c2aea36f9ed04bf5b73c6335a55a63d528ad9d39b  0000000121-9f0321b56a5d09d482c1bef142f1edac835fbf1b9f89aa2d3acf59ca68670f18  0000000121-9f750b64c1240f9d327266fb3ed557a86d6ea2abad4526521170e9169104c31c  0000000131-39eabe68b2acead2932cb9fec545d9710b784b69538a717157d4fdb39ccd8b57  0000000132-37a761199defcd6b53adc99e79867b1436965097b8e9e86486eef2393bd303db  0000000134-cd40be8312635ce22ac4451bbd9fbfa05c268b15ec835a855f56c7edb13d4ae5  0000000138-3fa762cbf098beb9c62a1b2d022639fcdd5dd6d5a80fa6f969b212a75bc9c095  0000000140-e30fa7a7d65c3dd34da48d0bf2245e5a9d7591857f7aeae71ebf5d9a48d7c598  0000000142-1c4bab653b3c9e81a72bf96766a6e5fedc5e8dda68971b3abe6202574971de5c  0000000142-7ce6684d10ea46dee0fdfa757433f93b09ec586483a50b59375033543c3b2552  0000000142-a37212ce7c1a5d707c5b60ffc377040f9880b83067ef9bc3c2622eee880ecb83  0000000142-bf49bd9597f63f418bf2225a759f7bd63064ef5a97a8025a5830dfb8f0378177  0000000149-ed4d8bf6dc4f4078e1f6d34f5258bc9e59e582c06ca7180921df28a704716435  0000000160-42a01b5175108e121acc52369affb94d7047be5c337fe211f944d70f3cd9d34d  0000000171-14077c80584f8e0fef2501e8936ee08d51dd662af351aa1cde18bbaca422d588  0000000172-eeb2e7bfddca7edacd16cded4c74baa982ba38f6214e29a616d166272b942d0d  0000000173-d30bb30f4809414918acea4976de94eb4040b7bc8c2fe23e9fb5284284a91743  0000000174-63afc522cd10ad938bdf2b4b7f4cf6787a16ebb5ce9a2650fbb4876e85439dbd  0000000176-6885463ec4176956d2b420d706ca425d00ca90fe5fed39483ea79a2207abb968  0000000179-27f759bdb99d9953b352f618a9a15fb656301a4c34c577da38d06e379e1e3587  0000000184-776563b539694b306ba2df0ec1ffe56edb9d21a416fe25a6cb2b1459eecf5e7b  0000000197-6818a32ef760a21145e78ed1ff92fbb2aa53538c0f88bf2f586b87673a0c6d25  0000000207-01505a79adb2f262195d7e6f1d05c773e52fe5081721f683c36e53032afb08b5  0000000209-813c374664a855cb91450a338582ee788e1b52b49f67b1f9b3b342c3a66a74bc  0000000225-0c822e1d706317a3659b5251f6b5e12e41b86cfce42f416a4afc4d2215586861  0000000236-0c44ec99819be28eac8fd6a7351c288d0819a0929e9b5a26a505138fdc6cc7b7  0000000238-5ceaa76ac59a0b057d4b6974ebf4e0d4647b4e3bd0b97a1474b965997f6fd82e  0000000243-5034c1255519110ac5e476e122b6710c1aa2ea58e2fffdd8fdb14fa3648f2f21  0000000247-9d9c9f81af59c5c3e938394325d3f810280cd2a7923a97e5ad28510d2ac41bbe  0000000248-f2ff1c49526fb73a3d81bd8c67dec81ba3507d4e340043c6f0b1d92eb1476de5  0000000255-2a1e774d6c6d3bd82eba7c75ef1b2a1d0e4e3c26bdd2a22263e6d25286d9c074  0000000258-c3f3837ee2d819d161b36af76404b3fd45ffffb1952ede74cfdaf5a1db18982a  0000000267-9cc792a018ea8aaa0e0615662c7eff47778de2643e46b98d21770903a402d41b  0000000269-ebbb3576143c09879eb6d64c16e280a0cfdd558487858c0cecc941aaff5e3cce  0000000275-21fd388b4e550a48b912c57a9e9f87da1b72343454fac1fd8c787d530c89a5c4  0000000277-c4a768d060dd821923ca306bb22cbb1c0fb2a1450f16556510c81e0ec9c11863  0000000284-abbbedaf9c79b08c2b1492055fb08d8cc823b5b017b90095fbb5a63c7e931f9a  0000000286-6e0748eac704397bf47d5a11b5130cee606edee09c2370d785fe02d56d4edcb9  0000000288-6351afb6a8625523e8cba5124bc2bff4fa2ba21e202943796850904ed383c97a  (+141 more)
ext/hint/_darcs/prefs/: repos  sources
ext/hint/_darcs/pristine.hashed/: 0000000057-2c12e109f933f639d2817eb9d9ca061c47d8f1e180feca8be1d945f3a848dc30  0000000092-8e679aff7893c5dea5af949bc6b1a39c382f7329197c7299eab3dfbda5e880da  0000000095-3a0f4635a4367dd561e82184360d9af4ac2b238c412ed2b7b6c3bdf70a9a1c51  0000000100-bcbc78fee786620bfa5c8abcdfe77c0f25c76ce7e278a3f9350e5c316bb8bd5a  0000000102-707d96c28c6cdf5948b83b350476e11ada743c9a4bd521ad8fb335db62475223  0000000103-57088e1d72ca4baaf6ef61c9f68a638a5e6b072b7e5fd198a976827c6a319117  0000000131-54b0ffbb3293e0aba7091f537f0594c259e03aaadfee706b86b198382079a2f4  0000000138-92ba0edc784d5c8be6719dce10f6043cd5a13c37cddfcb544e743270eaf4f192  0000000153-5d7f1209e69996b75efbe5d3e8a7db8da7f2031bf560359ebedbe65a9ec1e43e  0000000188-3d00e522cfbd738ca912f1efb2effbe093b91037bc5763d1536b69a6cc1eef93  0000000189-74c1b2feff04ddc6d25a318668bfa850ce32b3d6e362f21fa406a6a189eae5ca  0000000196-aa4fcb8ad9ba3c99f62181f23617d59536a86ba20e6878e609bea3836ff21fb0  0000000367-2e1c129d294e1008d617cc2eb5828265e93724e6e3c7e14e6de56a52b80f466e  0000000403-3e719e59add180fcc0860f048c80cf23bfc429a73e0b1edc54664ccd00f25f68  0000000421-840295da4536d72279c99cdb9b4d7696e3865f0bfa684d8f1f50befe0f263fec  0000000449-cc6da8de2679bb97447ffbdbebc9639488eb63344549c9cd60903466b602866a  0000000638-334975dddebde2fe48adba61e946ba99d4e698d97e41966e72d05edd4de4d030  0000000748-fe65f449aae40af8d1966193e7b8c05efa0dc88934c33cdd467c7a9a5af773a6  0000000778-6a0ef122defd57bff00ce4c465a86edeacba1f86f351250751ad6b2d987ce357  (+25 more)
ext/hint/examples/: SomeModule.hs  example.hs
ext/hint/src/Hint/: GHC.hs  (+16 more)
ext/hint/unit-tests/: run-unit-tests.hs
ext/hint/util/: mk_extensions_mod.hs
(+63 files in other folders)
