Name:                hubris
Version:             0.0.3
Author:              Mark Wotton
Maintainer:          mwotton@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2
License:        OtherLicense
License-File:   LICENSE
Build-Type:     Simple
Author:         Mark Wotton <mwotton@gmail.com>
Maintainer:     Mark Wotton <mwotton@gmail.com>
bug-reports:    http://github.com/mwotton/Hubris-Haskell/issues
Category:       Language
Stability:      Experimental
extra-source-files: 
Synopsis:       Support library for Hubris, the Ruby <=> Haskell bridge
Description:    Support library for Hubris, the Ruby to Haskell bridge
                more info at <http://github.com/mwotton/Hubris-Haskell>
                .
                Anyway, this version strips the boilerplate that used to be necessary, and is intended to be used in conjunction with <http://github.com/mwotton/Hubris>.

Library
        -- the ordering is critical, because Cabal doesn't do dependency analysis.
        Exposed-Modules: Language.Ruby.Hubris.Binding, Language.Ruby.Hubris, Language.Ruby.Hubris.LibraryBuilder, Language.Ruby.Hubris.ZCode, Language.Ruby.Hubris.GHCBuild, Includes
        c-sources: cbits/rshim.c
        -- includes:  cbits/rshim.h
        install-includes:  cbits/rshim.h
        include-dirs: cbits
        -- a proper fix for this would involve autoconf and I'm not feeling up to it.
        -- best to pass the args on the command line.
        --extra-include-dirs=/opt/local/include/ruby-1.9.1/ 
        --extra-lib-dirs: /opt/local/lib
        extra-libraries: ruby
        build-depends:  ghc, Cabal>=1.7.4 && < 1.9, base, haskell98, containers, bytestring, array, mtl, old-time, ghc-paths, hint

Executable Hubrify
  Main-is:           Hubrify.hs
  Build-Depends:     base >= 3 && < 5, ghc, Cabal>=1.7.4 && < 1.9, base, haskell98, containers, bytestring, array, mtl, old-time, ghc-paths, hint, process
  Other-Modules:     Language.Ruby.Hubris.Binding
  c-sources: cbits/rshim.c 
  include-dirs: cbits 
  extra-libraries: ruby1.8
