Name:                hubris
Version:             0.0.3
Author:              Mark Wotton
Maintainer:          mwotton@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2
License:        OtherLicense
License-File:   LICENSE
Build-Type:     Simple
Author:         Mark Wotton <mwotton@gmail.com>
Maintainer:     Mark Wotton <mwotton@gmail.com>
bug-reports:    http://github.com/mwotton/Hubris-Haskell/issues
Category:       Language
Stability:      Experimental
extra-source-files: 
Synopsis:       Support library for Hubris, the Ruby <=> Haskell bridge
Description:    Support library for Hubris, the Ruby to Haskell bridge
                more info at <http://github.com/mwotton/Hubris-Haskell>
                .
                Anyway, this version strips the boilerplate that used to be necessary, and is intended to be used in conjunction with <http://github.com/mwotton/Hubris>.

Executable Hubrify
  Main-is:           Hubrify.hs
  Build-Depends:     base >= 3 && < 5, ghc, Cabal>=1.7.4 && < 2.0, base, haskell98, containers, bytestring, array, mtl, old-time, ghc-paths, hint, process
  Other-Modules:     Language.Ruby.Hubris.Binding
  c-sources: cbits/rshim.c 
  include-dirs: cbits 
  cc-options: -U__BLOCKS__ -DHAVE_SNPRINTF
  extra-libraries: ruby
  -- extra-libraries: ruby1.9
  -- This is bad form, apparently, and if i include it, ./Setup dist cries big fat tears,
  --  but you _really_ want a dynamic lib with Hubrify, or you'll get a truly
  -- huge binary (may not even link, I had problems with the iconv dependency from HSbase)
  -- anyway, pass "--ghc-options=-dynamic" to ./Setup configure, and you should be apples.
  ghc-options: -dynamic

